--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./",
     "build": "tsc -p .",
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node-modules --no-notify src/index.ts" 
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node-modules --no-notify src/index.ts"
   },
   "author": "Mailson Albuquerque",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "http-status-codes": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.9",
+    "http-status-code": "^2.1.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
